--- a/contact.html
+++ b/contact.html
@@ -176,7 +176,7 @@
 		<tr>
 			<td>
 				<h1>LET'S TALK!</h1>
-				<p>If you have a big idea in mind, please get in touch.  </p>
+				<p>If you have a big idea in your in mind, please get in touch.  </p>
 
 				<p>This form is the best way to reach me.
 
